objects/Forecast_SW_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Forecast_SW_Details</relationshipLabel>
        <relationshipName>Forecast_SW_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TTotal__c</fullName>
        <label>TTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction_Type</label>
        <length>162</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTotal__c</fullName>
        <formula>IF( Transaction_Type__c = &apos;Total&apos;, &apos;Y&apos;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isTotal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tcv_100pc__c</fullName>
        <label>tcv_100pc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tcv_10pc__c</fullName>
        <label>tcv_10pc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tcv_30pc__c</fullName>
        <label>tcv_30pc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Forecast_SW_Detail</label>
    <nameField>
        <label>Forecast_SW_Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast_SW_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>